2011-10-09  Adam Strzelecki  <ono@users.sourceforge.net>

	* src/wxterminal/wxt_gui.h src/wxterminal/wxt_gui.cpp:
	Work around a number of issues compiling and running wxt with wx 2.9
	using 64-bit Cocoa on OSX Lion. All changes are #ifdef __WXOSX_COCOA__.
	These may not be necessary once Cocoa reaches a stable release. 
	(1) use wxToolbar AddStretchableSpace rather than AddSeparator 
	(2) wx Cocoa does not support logical operators such as wxDC inverse
	(3) wx Cocoa toolbar icons are blurry unless they are 24x24
	(4) wx Cocoa does not define _Bool even though it says it does

2011-10-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.h src/command.c src/getcolor.c src/gplt_x11.c src/save.c
	src/set.c src/show.c src/tables.c src/tables.h term/post.trm
	term/x11.trm demo/pm3d.dem docs/gnuplot.doc:

	New palette option "cubehelix". The is a family of palettes with the
	general property of combining N cycles of a color-wheel with a monotonic
	increase in overall intensity. This feature was suggested by Ingo Thies.
	See: D A Green (2011) "A colour scheme for the display of astronomical
	intensity images" http://arxiv.org/abs/1108.5083

2011-10-06  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/internal.c (f_sprintf): Always null-terminal a string written by
	the non-ANSI compliant MSVC++ routine _snprintf().

2011-10-03  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_options): When searching the list of graph windows
	the correct test is for window Id.

2011-10-03  Rich Seymour  <richseymour@users.sourceforge.net>

	* term/svg.trm: Look for strings " Bold" and/or " Italic" in font name
	and set the corresponding properties if found.  Patchset #3058920.

2011-10-03  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/post.trm (PS_options): Properly contain new variable in a
	block. Bug #3417716

	* src/Makefile.maint: New target makefile.awc.

	* src/makefile.all src/makefile.awc: Regenerated to include stats.c.
